first working version with UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Weather app</title>
 </head>
 <body>
+    <input type="text" id="place">
+    <button id="submit" type="button">search</button>
+
+    <div id="data-container">
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
