3 days forecast implemented

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div id="data-container">
         
     </div>
+
+    <div id="forecast-container">
+
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
