--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <button id="submit" type="button">search</button>
 
     <div id="data-container">
-        
+        <div id="main-content"></div>
+        <div id="more-stats"></div>
+        <div id="condition"></div>
     </div>
 
     <div id="forecast-container">
